--- a/templates/index.html
+++ b/templates/index.html
@@ -12,19 +12,19 @@
             font-size: 300%;
         }
         body {
-            background : #95d5b2;
+            background : #f8f9fa;
             margin: 0;
             padding: 0;
         }
         .cs-1 {
-            background: #4ea8de;
+            background: #80ffdb;
             padding: 30px;
             margin: 20px;
             border-style: solid;
             border-width: 1px;
-            border-color: #4ea8de;
+            border-color: #80ffdb;
             border-radius: 5px;
-            max-width: 28rem;
+            max-width: 48rem;
         }
         .cs-2 {
             background: #e9ecef;
@@ -34,7 +34,7 @@
             border-width: 1px;
             border-color: #ffffff;
             border-radius: 5px;
-            max-width: 28rem;
+            max-width: 38rem;
         }
         .speech-bubble {
             position: relative;
@@ -55,6 +55,16 @@
             margin-top: -10px;
             margin-left: -20px;
         }
+        .q-1 {
+            background: #e9ecef;
+            padding: 30px;
+            margin: 20px;
+            border-style: solid;
+            border-width: 1px;
+            border-color: #ffffff;
+            border-radius: 5px;
+            max-width: 38rem;
+        }
         
     </style>
 </head>
@@ -66,75 +76,25 @@
             </div>
         </nav>
 
-        <div class="container mt-2">
-            <div class="row justify-content-md-center mt-5">
-                <div class="col col-lg-2">
-                    <img src="static/img/bashanka.png" id="bashanka" class="rounded" width="150">
-                </div>  
-                <div class="col-md-auto">
-                    <div class="card text-bg-warning mb-3" style="max-width: 32rem;">
-                        <div class="card-body">
-                            <ul class="list-group ">
-                                <h5 class="card-title"> Hey ! Beautify your QR to color </h5>
-                                <li class="list-group-item">Visually descriptive QR codes.</li>
-                                <li class="list-group-item">Just one look capture your customers. </li>
-                                <li class="list-group-item">When customers see your QR Image, much eager to scan it.</li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>  
-            </div>
-        </div>
 
         <div class="container-sm ">
             <div class="row  was-validated justify-content-center">
                 <div class="col cs-1 ">
-                    <!-- left col   -->
-                    <div class="form-floating mb-1">
-                        <input type="text" class="form-control" id="txt-qr-size" value="3" size="10" required>
-                        <label for="txt-qr-size" class="form-label">Size</label>
-                        <div class="invalid-feedback">Size need to be between 1 to 21. </div>
+                    <!-- question   -->
+                    <div class="m-3 mx-sm-auto" id="question-board"></div>
+               
+
+                    <div class="text-end mt-3">
+                        <button type="button" id="btn-send" class="btn btn-primary">Submit</button>
                     </div>
-                    <div class="form-floating mb-1">
-                        <input type="text" class="form-control" id="txt-qr-link" placeholder="QR Link" value="https://www.nike.com/za/men" required>
-                        <label for="txt-qr-link" class="form-label">QR text, link</label>
-                        <div class="invalid-feedback">This field is the link/text pointed to when QR scanned. (min 1 and max 120 character)</div>
-                    </div>
-                    <div class="form-floating mb-1">
-                        <input type="text" class="form-control" id="txt-qrfg-color" placeholder="QR Forground Color" value="#000000" required>
-                        <label for="txt-qrfg-color" class="form-label">Qr Foreground Color</label>
-                        <div class="invalid-feedback">Hex color example #000000 </div>
-                    </div>      
-                    <div class="form-floating mb-1">
-                        <input type="text" class="form-control" id="txt-qrbg-color" placeholder="QR Background Color" value="#ffffff" required>
-                        <label for="txt-qrbg-color" class="form-label">Qr Background Color</label>
-                        <div class="invalid-feedback">Hex color example #ffffff </div>
-                    </div>                      
-                    <div class="form-floating mb-1">
-                        <textarea class="form-control" id="txt-img-base64" style="height: 100px" required></textarea>
-                        <label for="txt-img-base64" class="form-label">Image base64 encoded</label>
-                        <div class="invalid-feedback">Put here base64 encoded Image for QR art.</div>
-                    </div>
-                    <div class="mt-3">
-                        <button type="button" class="btn btn-warning btn-lg" id="btn-gen">Generate QR</button>
-                    </div>
-                </div>
-                <div class="col cs-2">
-                    <!-- right col   -->
-                    <div class="text-center">
-                       <img src="static/img/qr_v2.png" id="QrPreview" class="rounded">
-                    </div>
-                    <div class="text-center" id="custome-alert"></div>
-                    <div class="mb-3d mt-3 text-center">
-                        <button type="button" class="btn btn-dark btn-lg" id="btn-download">Download QR</button>
-                    </div>
+
                 </div>
             </div>
         </div>
 
         <div class="container-sm ">
             <div class="row text-center text-dark">
-              <h5>Generated QR are 💯️% scannable ! </h5>
+              <h5>survey ID :  a03edfe0-93b5-4b82-9480-593188aacda4  </h5>
             </div>
         </div>
 
@@ -142,7 +102,7 @@
         <footer class="fixed-bottom">
             <!-- Copyright -->
             <div class="text-center pt-2" style="background-color: rgba(0, 0, 0, 0.05); height: 40px;">
-                QR with image API Service - version 2.1.0  29.01.23
+                survey management system - version 1.0.0  
                 <img src="static/img/bashanka.png" alt="QR code generator" width="20" class="rounded">
             </div>
             <!-- Copyright -->
@@ -152,41 +112,55 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
         <script>
+
+            var questions;
+
             $(function () {
+                $( document ).ready(function() {
+                    $.ajax({
+                        url: '/questions?survey_id=eff29c58-a270-4feb-b2da-c475e9562940',
+                        type: 'GET',
+                        contentType: 'application/json',
+                        success: function (response) {
+                            var parsedJSON = JSON.parse(response);
+                            questions = parsedJSON;
+                            stackqestions(parsedJSON)
+                        },
+                        error: function (response) {
+                            //console.log(response)
+                            
+                           
+                        }
+                    })
+                });
                
-                $('#btn-gen').click(function () {
-                    processing(true)
-                    $('#btn-gen').hide()
-                    $('#btn-download').hide()
-                    $('#QrPreview').hide()
-                    var payload = {
-                        qrsize: Number($("#txt-qr-size").val()),
-                        qrlink: $("#txt-qr-link").val(),
-                        qrfgcolor: $("#txt-qrfg-color").val(),
-                        qrbgcolor: $("#txt-qrbg-color").val(),
-                        qrimage: $("#txt-img-base64").val()
+                $('#btn-send').click(function () {  
+                   var a = [];
+                    for(var i = 0; i < questions.length; i++) {
+                      var value = $(`input[name=${questions[i].ID}]:checked`).val();
+                      a.push({
+                         "question_id": questions[i].ID,
+                         "answer": Number(value)
+                      });
+                    }
+                     var payload = {
+                        survey_id: "eff29c58-a270-4feb-b2da-c475e9562940",
+                        user_id: "fda4697e-c5c4-455e-b462-4479f4169f6f",
+                        result: a
                     };
 
                     $.ajax({
-                        url: '/v2/base64',
+                        url: '/survey/results',
                         type: 'POST',
                         contentType: 'application/json',
                         data: JSON.stringify(payload),
                         success: function (response) {
-                            processing(false)
-                            $('#btn-download').show()
-                            $('#btn-gen').show()
-                            $('#QrPreview').show()
-                            $('#QrPreview').attr('src', `${response}`);
-                            $( "#custome" ).remove();
+                           alert("Thank you, survey received!")
                         },
                         error: function (response) {
-                            processing(false)
-                            addAlert(response.responseText);
-                            $('#QrPreview').show()
-                            $('#QrPreview').attr('src', "static/img/cartoon-frightened.png");
-                            $('#btn-download').hide()
-                            $('#btn-gen').show()
+                            //console.log(response)
+                            
+                           
                         }
                     })
                 });
@@ -205,6 +179,25 @@
                 }); */}}
 
             })
+
+            function stackqestions(q) {
+                $.each(q, function( key, value ) {
+                    $('#question-board').append(
+                        `<div><p><strong>` + (key + 1) + '. ' + value.question + `</strong></p><div class="q-1" id=${value.ID}></div></div>`
+                    );
+
+                    for(var i=0; i < 10; i++) {
+                       $(`#${value.ID}`).append(
+                            `<div class="form-check form-check-inline">
+                                <label class="form-check-label" for="inlineRadio1">${i+1}</label>
+                                <input class="form-check-input" type="radio" name="${value.ID}" id="${value.ID}" value="${i+1}" />
+                            </div>`
+                       )
+                     }
+                });
+
+                
+            }
 
             function addAlert(message) {
                 $( "#custome" ).remove();
