--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Survey management system - version 1.0.0</title>
+    <title>Survey owl - version 1.0.0</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <style>
         h1 {
@@ -71,7 +71,7 @@
     <body>
         <nav class="navbar bg-body-tertiary">
             <div class="container">
-                <img src="static/img/bashanka.png" alt="QR code generator" width="30" class="rounded">
+                <img src="static/img/survey-owel.png" alt="QR code generator" width="30" class="rounded">
                 Survey management system - v1.0.0
             </div>
         </nav>
@@ -114,11 +114,31 @@
         <script>
 
             var questions;
+            var surveyId;
+
+            function getUID() {
+               const url = new URL(getURL());
+               var p = url.pathname
+               a = p.split("/")
+               if (a.length == 3 && a[1]=="surveys"){
+                  surveyId = a[2]
+                  return surveyId
+               }
+               return ""
+            }
+
+            function getURL () {
+              return window.location.href
+            }
+
 
             $(function () {
+                
                 $( document ).ready(function() {
+                    let uid = getUID()
+                    console.log(uid)
                     $.ajax({
-                        url: '/questions?survey_id=eff29c58-a270-4feb-b2da-c475e9562940',
+                        url: `/questions?survey_id=${uid}`,
                         type: 'GET',
                         contentType: 'application/json',
                         success: function (response) {
@@ -144,8 +164,8 @@
                       });
                     }
                      var payload = {
-                        survey_id: "eff29c58-a270-4feb-b2da-c475e9562940",
-                        user_id: "fda4697e-c5c4-455e-b462-4479f4169f6f",
+                        survey_id: surveyId,
+                        user_id: "0bdbadff-ed8b-48f1-8c44-f20050c229e3",
                         result: a
                     };
 
