--- a/templates/admin.html
+++ b/templates/admin.html
@@ -127,15 +127,15 @@
 <body>
       <nav class="navbar bg-body-tertiary">
           <div class="container">
-              <img src="static/img/survey-owel.png" alt="QR code generator" width="60" class="rounded">
+              <img src="/static/img/survey-owel.png" alt="survey owel" width="60" class="rounded">
               Survey Owel - v1.0.0
           </div>
       </nav>
 
     <div class="sidebar">
-      <a href="#home">Survey</a>
-      <a href="#news">Indicators</a>
-      <a href="#contact">Questions</a>
+      <a onClick="menuSurvey()">Survey</a>
+      <a onClick="menuIndicator()">Indicators</a>
+      <a onClick="menuQuestion()">Questions</a>
       <a href="#about">Users</a>
       <a href="#about">Survey Journal</a>
     </div>
@@ -156,13 +156,16 @@
         <!-- Copyright -->
         <div class="text-center pt-2" style="background-color: rgba(0, 0, 0, 0.05); height: 50px;">
             Survey Owel - version 1.0.0  
-            <img src="static/img/survey-owel.png" alt="Survey Owel" width="40" class="rounded">
+            <img src="/static/img/survey-owel.png" alt="Survey Owel" width="40" class="rounded">
         </div>
         <!-- Copyright -->
     </footer>
     <!-- Footer -->
-
+    
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="/static/js/survey.js"></script>
+    <script src="/static/js/indicator.js"></script>
+    <script src="/static/js/question.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
         <script>
 
@@ -274,7 +277,7 @@
                 $.each(s, function( key, v ) {
                    let survey_id = v.ID
                    let date = new Date(v.CreatedAt);
-                   var d = date.toLocaleDateString('en-us', { weekday:"long", year:"numeric", month:"short"}) // "Jul 2021 Friday"
+                   var d = date.toLocaleDateString('en-us', {day:"numeric", weekday:"long", year:"numeric", month:"short"}) // "Jul 2021 Friday"
                    $(tbody).append(
                         `<tr id="row-${v.ID}" onClick=getSurveyUsers("${survey_id}")>
                           <td>${v.name}</td>
@@ -326,8 +329,8 @@
                    p = Math.ceil(p)
                    $(tbody).append(
                         `<tr>
-                          <td>${v.email}</td>
                           <td>${v.full_name}</td>
+                          <td>${v.email}</td>
                           <td>${v.total_weight}</td>
                           <td>${v.total_indicator}</td>
                           <td>
@@ -349,8 +352,8 @@
                 $(table).append(
                       `<thead>
                         <tr>
-                          <th scope="col">Email</th>
                           <th scope="col">Full Name</th>
+                          <th scope="col">Email</th>
                           <th scope="col">Weight</th>
                           <th scope="col">Result</th>
                           <th scope="col">evaluation</th>
